--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,7 +17,7 @@
     "hono": "^4.0.0",
     "drizzle-orm": "^0.29.3",
     "postgres": "^3.4.3",
-    "@google-cloud/compute": "^4.0.0",
+    "googleapis": "^128.0.0",
     "google-auth-library": "^9.6.0",
     "dotenv": "^16.4.1",
     "@paralleldrive/cuid2": "^2.2.2"
