ok boots but nothing loads

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "npm run dev --workspaces",
     "build": "npm run build --workspaces",
     "typecheck": "npm run typecheck --workspaces",
-    "lint": "npm run lint --workspaces"
+    "lint": "npm run lint --workspaces",
+    "db:create": "./scripts/create-database.sh",
+    "db:create:sql": "psql -U postgres -f scripts/create-database.sql"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
