--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://localhost:5432/gce_platform
+DATABASE_URL=postgres://orchestrator:orchestrator@localhost:5432/orchestrator
 PORT=3000
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
