--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,13 +15,16 @@
     "@gce-platform/types": "^1.0.0",
     "@hono/node-server": "^1.8.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@types/ws": "^8.18.1",
     "axios": "^1.10.0",
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.29.3",
     "google-auth-library": "^9.6.0",
     "googleapis": "^128.0.0",
     "hono": "^4.0.0",
-    "postgres": "^3.4.3"
+    "postgres": "^3.4.3",
+    "ssh2": "^1.16.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
