--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@gce-platform/types": "^1.0.0",
     "@hono/node-server": "^1.8.0",
+    "@hono/node-ws": "^1.1.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/ws": "^8.18.1",
     "axios": "^1.10.0",
