--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,6 +24,7 @@
     "google-auth-library": "^9.6.0",
     "googleapis": "^128.0.0",
     "hono": "^4.0.0",
+    "node-forge": "^1.3.1",
     "postgres": "^3.4.3",
     "ssh2": "^1.16.0",
     "sshpk": "^1.18.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@types/node-forge": "^1.3.11",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "drizzle-kit": "^0.20.13",
