--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,20 +19,30 @@
     "@types/sshpk": "^1.17.4",
     "@types/ws": "^8.18.1",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.29.3",
     "google-auth-library": "^9.6.0",
     "googleapis": "^128.0.0",
     "hono": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "node-forge": "^1.3.1",
+    "nodemailer": "^7.0.3",
     "postgres": "^3.4.3",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "ssh2": "^1.16.0",
     "sshpk": "^1.18.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.0",
     "@types/node-forge": "^1.3.11",
+    "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "drizzle-kit": "^0.20.13",
