--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -3,3 +3,4 @@ PORT=3000
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
+JWT_SECRET=your-jwt-secret-key-change-this-in-production
