--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -4,3 +4,8 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
 JWT_SECRET=your-jwt-secret-key-change-this-in-production
+
+# HTTPS Configuration (optional)
+HTTPS_ENABLED=false
+SSL_CERT_PATH=./certs/cert.pem
+SSL_KEY_PATH=./certs/key.pem
