I asked it to do github key plus ssh lmao

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -5,6 +5,15 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
 JWT_SECRET=your-jwt-secret-key-change-this-in-production
 
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+GITHUB_REDIRECT_URI=http://localhost:3000/api/github-auth/callback
+
+# Frontend URL (for OAuth redirects)
+FRONTEND_URL=http://localhost:5173
+BACKEND_URL=http://localhost:3000
+
 # HTTPS Configuration (optional)
 HTTPS_ENABLED=false
 SSL_CERT_PATH=./certs/cert.pem
