getting ready for deploy

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -14,6 +14,11 @@ GITHUB_REDIRECT_URI=http://localhost:3000/api/github-auth/callback
 FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:3000
 
+# CORS Configuration
+# Comma-separated list of allowed origins
+# Examples: http://localhost:5173,https://localhost:5173,http://192.168.1.100:5173
+CORS_ORIGINS=http://localhost:5173,https://localhost:5173,http://localhost:3000,https://localhost:3000
+
 # HTTPS Configuration (optional)
 HTTPS_ENABLED=false
 SSL_CERT_PATH=./certs/cert.pem
