origins and shit

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -16,8 +16,8 @@ BACKEND_URL=http://localhost:3000
 
 # CORS Configuration
 # Comma-separated list of allowed origins
-# Examples: http://localhost:5173,https://localhost:5173,http://192.168.1.100:5173
-CORS_ORIGINS=http://localhost:5173,https://localhost:5173,http://localhost:3000,https://localhost:3000
+# Examples: http://localhost:5173,https://localhost:5173,http://192.168.1.100:5173,http://slopbox.dev,https://slopbox.dev
+CORS_ORIGINS=http://localhost:5173,https://localhost:5173,http://localhost:3000,https://localhost:3000,http://localhost,https://localhost
 
 # HTTPS Configuration (optional)
 HTTPS_ENABLED=false
