--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -16,7 +16,8 @@ BACKEND_URL=http://localhost:3000
 
 # CORS Configuration
 # Comma-separated list of allowed origins
-# Examples: http://localhost:5173,https://localhost:5173,http://192.168.1.100:5173,http://slopbox.dev,https://slopbox.dev
+# Examples: http://localhost:5173,https://localhost:5173,http://192.168.1.100:5173,http://slopbox.dev,https://slopbox.dev,https://api.slopbox.dev
+# For slopbox.dev deployment: http://slopbox.dev,https://slopbox.dev,http://www.slopbox.dev,https://www.slopbox.dev
 CORS_ORIGINS=http://localhost:5173,https://localhost:5173,http://localhost:3000,https://localhost:3000,http://localhost,https://localhost
 
 # HTTPS Configuration (optional)
