--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src/**/*.ts",
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "tsx src/db/migrate.ts",
-    "generate-certs": "node scripts/generate-certs.js"
+    "generate-certs": "node scripts/generate-certs.js",
+    "generate-certs:multi": "node scripts/generate-certs-multi-domain.js"
   },
   "dependencies": {
     "@gce-platform/types": "^1.0.0",
