--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -9,3 +9,11 @@ VITE_SSL_KEY_PATH=./certs/key.pem
 # Backend HTTPS Configuration
 # Set to true if your backend is running on HTTPS
 VITE_BACKEND_HTTPS=false
+
+# API URL Configuration (optional)
+# Override the automatic API URL detection
+# Examples: 
+# - https://api.slopbox.dev/api
+# - http://192.168.1.100:3000/api
+# Leave empty to use automatic detection
+VITE_API_URL=
