--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.{ts,tsx}",
-    "generate-certs": "node scripts/generate-certs.js"
+    "generate-certs": "node scripts/generate-certs.js",
+    "generate-certs:multi": "node scripts/generate-certs-multi-domain.js"
   },
   "dependencies": {
     "@gce-platform/types": "^1.0.0",
