--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:prod": "VITE_API_URL=https://api.slopbox.dev vite",
     "devhost": "vite --host 0.0.0.0 --port 80",
     "build": "tsc && vite build",
     "preview": "vite preview",
