ok this be working

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -24,3 +24,8 @@ CORS_ORIGINS=http://localhost:5173,https://localhost:5173,http://localhost:3000,
 HTTPS_ENABLED=false
 SSL_CERT_PATH=./certs/cert.pem
 SSL_KEY_PATH=./certs/key.pem
+
+# SendGrid Configuration
+SENDGRID_API_KEY=your-sendgrid-api-key
+SENDGRID_FROM_EMAIL=noreply@slopbox.dev
+SENDGRID_FROM_NAME=Slopbox
