--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "@types/node": "^20.11.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@sendgrid/mail": "^8.1.5"
   }
 }
