--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,6 +19,7 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "ansi-to-html": "^0.7.2",
     "axios": "^1.6.5",
     "hono": "^4.8.2",
     "lucide-react": "^0.522.0",
