--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,7 @@
     "@gce-platform/types": "^1.0.0",
     "@hono/node-server": "^1.8.0",
     "@hono/node-ws": "^1.1.7",
+    "@octokit/rest": "^22.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/sshpk": "^1.17.4",
     "@types/ws": "^8.18.1",
