--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,6 +22,7 @@
     "@xterm/xterm": "^5.5.0",
     "ansi-to-html": "^0.7.2",
     "axios": "^1.6.5",
+    "date-fns": "^4.1.0",
     "hono": "^4.8.2",
     "lucide-react": "^0.522.0",
     "react": "^18.2.0",
