--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@gce-platform/types": "^1.0.0",
     "@tanstack/react-query": "^5.17.0",
+    "@types/prismjs": "^1.26.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
@@ -25,9 +26,11 @@
     "date-fns": "^4.1.0",
     "hono": "^4.8.2",
     "lucide-react": "^0.522.0",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
+    "react-simple-code-editor": "^0.14.1",
     "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
