change to use onfacet.dev

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -16,8 +16,8 @@ BACKEND_URL=http://localhost:3000
 
 # CORS Configuration
 # Comma-separated list of allowed origins
-# Examples: http://localhost:5173,https://localhost:5173,http://192.168.1.100:5173,http://slopbox.dev,https://slopbox.dev,https://api.slopbox.dev
-# For slopbox.dev deployment: http://slopbox.dev,https://slopbox.dev,http://www.slopbox.dev,https://www.slopbox.dev
+# Examples: http://localhost:5173,https://localhost:5173,http://192.168.1.100:5173,http://onfacet.dev,https://onfacet.dev,https://api.onfacet.dev
+# For onfacet.dev deployment: http://onfacet.dev,https://onfacet.dev,http://www.onfacet.dev,https://www.onfacet.dev
 CORS_ORIGINS=http://localhost:5173,https://localhost:5173,http://localhost:3000,https://localhost:3000,http://localhost,https://localhost
 
 # HTTPS Configuration (optional)
@@ -27,5 +27,5 @@ SSL_KEY_PATH=./certs/key.pem
 
 # SendGrid Configuration
 SENDGRID_API_KEY=your-sendgrid-api-key
-SENDGRID_FROM_EMAIL=noreply@slopbox.dev
+SENDGRID_FROM_EMAIL=noreply@onfacet.dev
 SENDGRID_FROM_NAME=Slopbox
